; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_lg-laptop.c_acpi_notify.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_lg-laptop.c_acpi_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device = type { i32 }
%struct.key_entry = type { i64 }

@.str = private unnamed_addr constant [12 x i8] c"notify: %d\0A\00", align 1
@inited = common dso_local global i32 0, align 4
@INIT_SPARSE_KEYMAP = common dso_local global i32 0, align 4
@wmi_input_dev = common dso_local global i32 0, align 4
@KE_KEY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.acpi_device*, i32)* @acpi_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpi_notify(%struct.acpi_device* %0, i32 %1) #0 {
  %3 = alloca %struct.acpi_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.key_entry*, align 8
  store %struct.acpi_device* %0, %struct.acpi_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.acpi_device*, %struct.acpi_device** %3, align 8
  %7 = getelementptr inbounds %struct.acpi_device, %struct.acpi_device* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @acpi_handle_debug(i32 %8, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* @inited, align 4
  %12 = load i32, i32* @INIT_SPARSE_KEYMAP, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %31

15:                                               ; preds = %2
  %16 = load i32, i32* @wmi_input_dev, align 4
  %17 = call %struct.key_entry* @sparse_keymap_entry_from_scancode(i32 %16, i32 128)
  store %struct.key_entry* %17, %struct.key_entry** %5, align 8
  %18 = load %struct.key_entry*, %struct.key_entry** %5, align 8
  %19 = icmp ne %struct.key_entry* %18, null
  br i1 %19, label %20, label %30

20:                                               ; preds = %15
  %21 = load %struct.key_entry*, %struct.key_entry** %5, align 8
  %22 = getelementptr inbounds %struct.key_entry, %struct.key_entry* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @KE_KEY, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %20
  %27 = load i32, i32* @wmi_input_dev, align 4
  %28 = load %struct.key_entry*, %struct.key_entry** %5, align 8
  %29 = call i32 @sparse_keymap_report_entry(i32 %27, %struct.key_entry* %28, i32 1, i32 1)
  br label %30

30:                                               ; preds = %26, %20, %15
  br label %31

31:                                               ; preds = %30, %2
  ret void
}

declare dso_local i32 @acpi_handle_debug(i32, i8*, i32) #1

declare dso_local %struct.key_entry* @sparse_keymap_entry_from_scancode(i32, i32) #1

declare dso_local i32 @sparse_keymap_report_entry(i32, %struct.key_entry*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
